--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Test</title>
-    <script src="test.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
   </body>
