--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>Work5</title>
     <script src="script.js"></script>
   </head>
   <body>
